--- a/app/assets/stylesheets/redesign/pages/_terms.css.scss
+++ b/app/assets/stylesheets/redesign/pages/_terms.css.scss
@@ -1,6 +1,6 @@
 .terms {
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: $screen-tablet) {
     margin-right: 1rem;
     margin-left: 1rem;
 
