--- a/app/views/fame_chains/new.html.slim
+++ b/app/views/fame_chains/new.html.slim
@@ -1,9 +1,9 @@
-.page-title.default.fame
+.page-title.page-title-peach.fame-page-title
   .container
     .page-title--details
-      = image_tag '_famechain/title.png', width: 432, height: 146, alt: 'The Fame Chain'
+      = image_tag '_famechain/title.png', width: 432, height: 146, alt: 'The Fame Chain', class: 'img-responsive'
 
-      p.text-center
+      p
         | A network of fashion forward
         br
         | free thinking bloggers increasing their cred
