--- a/app/views/modals/_modal_20150715_polyvore.html.slim
+++ b/app/views/modals/_modal_20150715_polyvore.html.slim
@@ -99,7 +99,7 @@ javascript:
           td.modal-panel
             table.email-form
               tr
-                td : input.form-control.form-control-md.form-control-transparent required='required' name="email" type="text" placeholder="Redeem via e-mail"
+                td : input.form-control required='required' name="email" type="text" placeholder="Redeem via e-mail"
                 td : input.btn.btn-md.btn-plain type="submit" value="Send"
 
 
