--- a/app/views/products/collections/_products_footer.html.slim
+++ b/app/views/products/collections/_products_footer.html.slim
@@ -3,7 +3,7 @@
 - last = products.slice(3,1)
  
 .row.relative
-  .col-md-6.col-xs-12.col-xxs-12
+  .col-md-6.col-xs-12
   	.content
       h2= title
       p= content
@@ -15,7 +15,7 @@
 
 - if last
   .row.relative
-    .col-md-6.col-xs-12.col-xxs-12
+    .col-md-6.col-xs-12
     	.content
         h2= title
         p= content
