--- a/app/views/products/details/_side_panel_sizes.html.slim
+++ b/app/views/products/details/_side_panel_sizes.html.slim
@@ -26,7 +26,7 @@
             | All sizes are US sizes
         - if @product.default_sizes?
           - @product.default_sizes.each do |size|
-            .col-md-3.col-xs-3.col-xxs-6
+            .col-md-3.col-sm-3.col-xs-6
               a.size-option.product-option href="#" data-id=size.id  data-name=size.presentation
                 span.option-box.size-box= size.presentation
 
@@ -37,6 +37,6 @@
           h2=  "Custom Sizes +#{@product.custom_size_price}"
 
           - @product.custom_sizes.each do |size|
-            .col-md-3.col-xs-3.col-xxs-6
+            .col-md-3.col-sm-3.col-xs-6
               a.size-option.product-option href="#" data-id=size.id  data-name=size.presentation data-price=@product.custom_size_price
                 span.option-box.size-box= size.presentation
