--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -75,7 +75,7 @@
             .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
           .col-sm-5.col-inline
             .input-group
-              input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="Redeem via e-mail"
+              input.form-control name="email" type="text" placeholder="Redeem via e-mail"
               span.input-group-addon
                 input.btn-plain.btn-transparent type="submit" value="Send"
 
