--- a/app/views/spree/checkout/edit.html.slim
+++ b/app/views/spree/checkout/edit.html.slim
@@ -1,9 +1,14 @@
 = content_for :inline_javascript do
   | page.initCheckoutEditPage();
 
-.checkout-title.page-title
-  .checkout-title--content.container.text-center
-    h1.checkout-h1 Checkout
+/ .checkout-title.page-title
+  / .checkout-title--content.container.text-center
+  /   h1.checkout-h1 Checkout
+
+.page-title.checkout-page-title
+  .container
+    .page-title--details
+      h1 Checkout
 
 .checkout.page-content
   .container
