--- a/app/views/spree/shared/_login.html.slim
+++ b/app/views/spree/shared/_login.html.slim
@@ -21,8 +21,8 @@
 
       .row
         .col-md-3.col-sm-3.col-xs-12
-          = link_to t(:create_a_new_account), spree.signup_path(cl: 'login-form'), class: 'btn btn-block btn-black btn-md low-btn'
+          = link_to t(:create_a_new_account), spree.signup_path(cl: 'login-form'), class: 'text-uppercase-xs'
         .col-md-3.col-sm-3.col-xs-12
-          = link_to t(:forgot_password), main_app.new_spree_user_password_path, :id=> 'forgot-password', class: 'btn btn-block btn-black btn-md low-btn'
+          = link_to t(:forgot_password), main_app.new_spree_user_password_path, :id=> 'forgot-password', class: 'text-uppercase-xs'
 
 div data-hook="login_extras"
