--- a/app/views/users/profiles/show.html.slim
+++ b/app/views/users/profiles/show.html.slim
@@ -1,7 +1,7 @@
-.user-account-page-title
+.page-title.page-title-peach
   .container
     .page-title--details
-      h1.user-account-title.no-padding-bottom.text-white Account Settings
+      h1 Account Settings
 
 .page-content.user.profiles.show
   .container.relative
