--- a/app/views/users/styleprofiles/show.html.slim
+++ b/app/views/users/styleprofiles/show.html.slim
@@ -1,7 +1,7 @@
-.user-account-page-title
+.page-title.page-title-peach
   .container
     .page-title--details
-      h1.user-account-title.no-padding-bottom.text-white My style profile
+      h1 My style profile
 
 .page-content.user.style-quiz.show
   .container.relative
