--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -1,12 +1,17 @@
+// Fonts and icons
+@import url(http://fonts.googleapis.com/css?family=Forum);
 @import 'font-awesome';
+
 // Include bootstrap
 @import 'bootstrap/variables';
-@import 'redesign/styleguide/bootstrap-variables';
+@import 'redesign/helpers/bootstrap-variables';
 @import "bootstrap/mixins";
+
 // Reset and dependencies
 @import "bootstrap/normalize";
 @import "bootstrap/print";
 @import "bootstrap/glyphicons";
+
 // Core CSS
 @import "bootstrap/scaffolding";
 @import "bootstrap/type";
@@ -15,6 +20,7 @@
 @import "bootstrap/tables";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
+
 // Components
 @import "bootstrap/component-animations";
 @import "bootstrap/dropdowns";
@@ -47,11 +53,11 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+
 // @end Include bootstrap
 // -----------------
 
 // Setup 
-@import 'redesign/vars';
 @import 'redesign/helpers/mixins';
 @import 'redesign/helpers/helpers';
 @import 'redesign/helpers/icons';
@@ -61,11 +67,14 @@
 // Libs 
 @import 'libs/vex/*';
 @import 'redesign/libs/chosen';
-@import 'redesign/libs/chosen_override';
+@import 'redesign/libs/chosen-override';
+@import 'redesign/libs/select2';
+@import 'redesign/libs/select2-override';
 // @end Libs
 // -----------------
 
 // Components 
+@import 'redesign/components/page-title';
 @import 'redesign/components/tabs';
 @import 'redesign/components/modal';
 @import 'redesign/components/tables';
@@ -75,13 +84,12 @@
 @import 'redesign/components/rhombus';
 @import 'redesign/components/buttons';
 @import 'redesign/components/cart';
-@import 'redesign/facebook';
+@import 'redesign/components/category';
 // @end Components
 // -----------------
 
 // Layout
 @import 'redesign/layout/grid';
-@import 'redesign/styleguide/styles';
 @import 'redesign/layout/typography';
 @import 'redesign/layout/forms';
 @import 'redesign/layout/base';
@@ -112,116 +120,3 @@
 @import 'redesign/pages/style_session';
 // @end Pages
 // -----------------
-
-
-// @import 'redesign/flash_slider';
-
-
-
-
-
-
-
-
-
-
-
-
-
-// Time specific content
-// @import 'transient_content';
-
-// .standard-form {
-//   height: 60px;
-//   padding: 0 5px;
-// }
-
-.has-error {
-  .help-inline {
-    color: #f2dede;
-  }
-}
-
-.has-warning {
-  .help-inline {
-    color: #F2DDD0;
-  }
-}
-
-.pink {
-  background-color: #f6e1d5;
-}
-
-.text-pink { color: #DBB8C7;}
-
-.brand-pink {
-  background-color:#eeddf0;
-}
-
-.pink-light {
-  background-color: #f8ece9;
-}
-
-// .cream {
-//   background-color: #fbf5f3
-// }
-
-.landing-page {
-  .row.content-box {
-    margin:20px 0 20px 0;
-
-    .content {
-      height:381px;
-      border:2px solid black;
-    }
-
-    img {
-       width:100%;
-       margin-right:20px;
-       border:2px solid white;
-    }
-  }
-}
-
-h1.edit-title {
-  font-size: 60px;
-  margin-top: 25%;
-}
-
-.zopim {
-  @media(max-width: 990px){
-    display:none;
-  }
-}
-
-.page-title {
-  background-color: #eeddf0;
-}
-
-input.form-control {
-  text-transform: none;
-}
-
-.select2, .select2-container, .select2-container--default, .selection, .select2-selection, .select2-selection--single ,.select2-selection__rendered, .select2-selection__arrow, .select2-selection__rendered, .select2-search__field, button, .btn{
-  &:focus {
-    outline:none;
-  }
-}
-
-.checkout .slash {
-  margin-top: 60px;
-  float: left;
-  margin-left: -5px;
-  margin-right: -5px;
-}
-
-.checkout .card_code {
-  @media(max-width: 480px){
-    clear: both;
-  }
-}
-
-.checkout .shipAddress{
-  text-transform: none;
-  margin-left: 10px;
-}
