--- a/app/assets/stylesheets/redesign/components/_buttons.scss
+++ b/app/assets/stylesheets/redesign/components/_buttons.scss
@@ -6,6 +6,7 @@
   border: 0;
   min-height: $form-control-height-md;
   &:hover { color: #fff;}
+  &:active, &:focus { outline: none;}
 }
 
 .btn-block {
@@ -13,6 +14,10 @@
 	padding-right: 10px;
 }
 
+.btn-xs {
+  font-size: 10px;
+  line-height: 27px;
+}
 // - text
 .btn-text {
   cursor: default;
@@ -24,15 +29,19 @@
 .btn-transparent {
 	border: 0;
 	background: none;
+  color: inherit;
 }
+
 .btn-black {
 	background-color: #000;
 	&:hover { background-color: lighten(#000, 20%);}
 }
+
 .btn-grey {
 	background-color: $fp-charcoal;
 	&:hover { background-color: lighten($fp-charcoal, 15%);}
 }
+
 .btn-blue {
 	background-color: #033649;
 	&:hover { background-color: #355e6d;}
@@ -44,6 +53,12 @@
 	padding-left: (2 * $form-control-height-md);
   position: relative;
   color: #fff;
+  @media (max-width: $screen-phone) {
+    font-size: 0.85em;
+    line-height: 27px;
+    padding-left: (1.5 * $form-control-height-md);
+    padding-right: (0.5 * $form-control-height-md);
+  }
   &:hover {
   	background-color: lighten(#3b5998, 5%);
   	&:before {
@@ -65,4 +80,28 @@
   span {
     font-size: 12px;
   }  
+}
+
+// - btn radio extras
+.btn-group-radio {
+  input[type=radio] {
+    display: none;
+    &:checked + .btn {
+      color: white;
+      background: black;
+    }
+  }
+  .btn {
+    position: relative;
+    label {
+      padding: 0;
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      color: inherit;
+      line-height: $input-height-base;
+    }
+  }
 }
