--- a/app/assets/stylesheets/redesign/layout/_base.css.scss
+++ b/app/assets/stylesheets/redesign/layout/_base.css.scss
@@ -1,7 +1,3 @@
-// body {
-//   font-family: $font-family-secondary;
-// }
-
 a:hover { color: $fp-highlight;}
 
 a:hover, a:focus { text-decoration: none;}
@@ -10,6 +6,7 @@ a:active, a:focus { outline: none !important; }
 
 // Page style
 .page-content {
-  padding-top: $fp-menu-size;
+  padding-top: $fp-menu-height-full;
   padding-bottom: 60px;
 }
+.page-title + .page-content { padding-top: 0;}
