--- a/app/assets/stylesheets/redesign/layout/_header.css.scss
+++ b/app/assets/stylesheets/redesign/layout/_header.css.scss
@@ -1,7 +1,3 @@
-/////////// locale selector //////////
-
-// @import 'redesign/header/locale_selector';
-
 // Navigation
 .nav-menu-container { 
   height: $fp-menu-height;
@@ -12,7 +8,7 @@
   width: 100%;
   z-index: 100;
   background: white;
-  height: $fp-menu-size;
+  height: $fp-menu-height-full;
   border-bottom: 1px solid $gray-lighter;
   text-transform: uppercase;
   font-size: 1.4rem;
@@ -48,11 +44,15 @@
   }
 }
 
+.active-hover {
+  position: relative;
+}
+
 .masthead {
   padding-right: 40px;
   padding-top: 19px;
   padding-left: 20px;
-  @media(max-width: 480px) {
+  @media(max-width: $screen-phone) {
     padding-right: 0;
     padding-left: 0;
   }
@@ -83,7 +83,7 @@
 // Mega nav-menu
 %mega-menu-menu {
   position: absolute;
-  top: $fp-menu-size;
+  top: $fp-menu-height-full;
   background: $fp-lightest-grey;
   width: 100%;
   z-index: 1000;
@@ -100,7 +100,6 @@
     }
   }
 }
-
 
 .mega-menu:hover,
 .menu-item:hover .mega-menu {
@@ -125,6 +124,7 @@
 
 .search {
   position: relative;
+  cursor: pointer;
 }
 
 // Search
@@ -287,7 +287,7 @@
   padding-top: $grid-gutter-width;
   &:before, &:after {
     bottom: 100%;
-    left: 555px;
+    left: 435px;
     border: solid transparent;
     content: " ";
     height: 0;
@@ -638,140 +638,7 @@ ul.secondary.pull-right {
   }
 }
 
-
-// Responsive nav 
-.responsive-nav-wrapper { // #sideMenu
-  overflow: auto;
-  height: 100%;
-  font-size: 15px;
-  background-color: #f8f8f8;
-  position: fixed;
-  top: 0;
-  left: -90%;
-  width: 90%;
-  z-index: $sidebar-zindex;
-  transition: left 0.5s;
-
-  &.is-open {
-    left: 0;
-  }
-
-  a {
-    color: black;
-    color: $text-color;
-    font-weight: 500;
-  }
-
-  #close {
-    font-size: 35px;
-    float: right;
-    margin-right: 10px;
-    margin-top:-8px;
-    img {
-      width: 30px;
-      opacity: 0.7;
-      margin-right: 10px;
-    }
-  }
-}
-
-.responsive-nav-header {
-  background-color: #e7e7e7;
-  padding-top:10px;
-  padding-bottom:10px;
-}
-
-.responsive-nav-title {
-  font-size: 19px;
-  text-transform: uppercase;
-  margin: 0;
-  padding: 12px 0 0 15px;
-  float: left;
-}
-
-.responsive-nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.responsive-nav-link {
-  position: relative;
-  display: block;
-  text-transform: uppercase;
-  padding: 15px;
-  &:after {
-    @extend .fa;
-    @extend .fa-angle-down:before;
-    position: absolute;
-    right: 25px;
-    font-size: 1.9em;
-    line-height: 20px;
-  }
-  &.clicked:after {
-    @extend .fa-angle-up:before;
-  }
-  &:hover, &:focus {
-    text-decoration: none;
-  }
-}
-
-.responsive-nav-dropdown {
-  background-color: #f8f8f8;
-  padding: 0;
-  margin: 0;
-  height: 0;
-  overflow: hidden;
-  transition: height 0.5s;
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  a {
-    display: block;
-    padding: 5px 20px;
-    font-size: $font-size-base;
-    &:hover, &:focus {
-      background-color: #f5f5f5;
-      text-decoration: none;
-    }
-  }
-}
-
-.responsive-nav-btn {
-  margin: 5px 0;
-  min-width: 265px;
-}
-
-// @end Responsive nav
-// -----------------
-
-
-
 // Locates
-@mixin dropdown-triangle($color, $width, $height) {
-  $arrow-color:    $color;
-  $arrow-median:   $width / 2;
-  $arrow-width:    $width;
-  $arrow-height:   $height;
-  $arrow-triangle: $arrow-height $arrow-median 0 $arrow-median;
-
-  border-color: $arrow-color transparent transparent transparent;
-  border-style: solid;
-  border-width: $arrow-triangle;
-  width: $arrow-width;
-}
-
-// @mixin transform($transforms) {
-//      -moz-transform: $transforms;
-//        -o-transform: $transforms;
-//       -ms-transform: $transforms;
-//   -webkit-transform: $transforms;
-//           transform: $transforms;
-// }
-
-// Desktop
 #gray-top-banner {
   background-color: $gray-light-bg;
   font-size: 15px;
