--- a/app/assets/stylesheets/redesign/pages/_faqs.css.scss
+++ b/app/assets/stylesheets/redesign/pages/_faqs.css.scss
@@ -1,5 +1,5 @@
 .page-content.faq {
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: $screen-tablet) {
       margin-right: 1rem;
       margin-left: 1rem;
     }
