--- a/app/assets/stylesheets/redesign/pages/product/_fit_guide.css.scss
+++ b/app/assets/stylesheets/redesign/pages/product/_fit_guide.css.scss
@@ -92,7 +92,7 @@
       margin-bottom: 62px;
     }
   }
-  @media screen and (max-width: 480px){
+  @media screen and (max-width: $screen-phone){
     .vex-content {
       width:100%;
       height:100%;
