--- a/app/views/landing_pages/_product.html.slim
+++ b/app/views/landing_pages/_product.html.slim
@@ -1,4 +1,4 @@
-.col-md-3.col-xs-6.col-xxs-12.category--item
+.col-md-3.col-sm-6.col-xs-12.category--item
   = link_to collection_product_path(product) do
     = cropped_product_hoverable_image_tag(product)
   .details.text-center
