--- a/app/views/products/collections/_products_two_left.html.slim
+++ b/app/views/products/collections/_products_two_left.html.slim
@@ -2,7 +2,7 @@
   - products.each do |product|
  	= render :partial => '/products/collections/product', :locals => { :product => product }
 
-  .col-md-6.col-xs-12.col-xxs-12
+  .col-md-6.col-xs-12
   	.content
       p= content
  
