--- a/app/views/products/collections/_products_with_content.html.slim
+++ b/app/views/products/collections/_products_with_content.html.slim
@@ -10,7 +10,7 @@
 /! Second row - [][][ XX ]
 .row.relative
   = render partial: 'product', collection: products.shift(2), as: :product
-  .col-md-6.col-xs-12.col-xxs-12
+  .col-md-6.col-xs-12
     .content
       p= raw @collection.details.description
 
@@ -28,7 +28,7 @@
     /! footer - one or two row [ X X ][][]
     - products.each_slice(2) do |footer_products|
       .row.relative
-        .col-md-6.col-xs-12.col-xxs-12
+        .col-md-6.col-xs-12
           .content
             p= raw @collection.details.footer
         = render partial: 'product', collection: footer_products, as: :product
