--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -1,13 +1,13 @@
 h2.text-center Easy Size &amp; Measurement Guide
 .size-alert
   .row
-    .col-md-12.col-xs-12.col-xxs-12
+    .col-xs-12
       h6= explanation
       p Please check the size chart below.
 
 .container-fluid
   .row
-    .col-md-12.col-xs-12.col-xxs-12
+    .col-xs-12
       h6 How to Measure Yourself
       p.no-padding Please use a cloth tape measure. Keep the tape measure parallel to the floor and don’t wrap it too tight. We recommend measuring yourself in your underwear, not over clothing and wearing the same bra (or no bra) that you intend to wear with the dress. We suggest getting a friend to help you if possible &amp; remember to stand with your feet together.
 
