--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -121,10 +121,10 @@ ruby:
       button.btn.btn-block.btn-black.buy-button Add to Cart
 
     .row.secondary-actions
-      .col-md-6.col-xs-6.col-xxs-12
+      .col-md-6.col-sm-6.col-xs-12
         button#fit-guide.btn.btn-block.btn-blue Fit Guide
 
-      .col-md-6.col-xs-6.col-xxs-12
+      .col-md-6.col-sm-6.col-xs-12
         - if Features.active?(:moodboard)
           button#add-to-moodboard.btn.btn-block.btn-blue data-user-present=current_spree_user.present?
             |+ Moodboard
@@ -197,7 +197,7 @@ hr
     .row.relative
     - @product.recommended_products.each do |recommended_product|
       .clearfix.visible-sm-block.visible-xs-block
-      .col-md-3.col-xs-6.col-xxs-12.category--item data-id=(recommended_product.id)
+      .col-md-3.col-sm-6.col-xs-12.category--item data-id=(recommended_product.id)
         - if Features.active?(:moodboard)
           = link_to collection_product_path(recommended_product) do
             - if current_user_moodboard.contains(product_id: recommended_product.id)
