--- a/app/views/statics/why_us.html.slim
+++ b/app/views/statics/why_us.html.slim
@@ -1,7 +1,7 @@
-.page-title.default.why-us-header
+.page-title
   .container
     .page-title--details
-      h1.no-padding-bottom.why-us-title Why shop with us?
+      h1 Why shop with us?
 
 .page-content.why-us
   .row
