--- a/app/views/users/orders/index.html.slim
+++ b/app/views/users/orders/index.html.slim
@@ -1,7 +1,7 @@
-.user-account-page-title
+.page-title.page-title-peach
   .container
     .page-title--details
-      h1.user-account-title.no-padding-bottom.text-white My Orders
+      h1 My Orders
 
 .page-content.user.order.show
   .container.relative
