--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -166,6 +166,18 @@ ruby:
               = image_tag('icon-arrow-right.png')
           ul.dropdown-menu.mobileAnimation
             li = link_to 'Dresses made in 48 hours', fast_making_dresses_path
+        li
+          a
+            | LOOKBOOK
+            span.arrow
+              = image_tag('icon-arrow-right.png')
+          ul.dropdown-menu.mobileAnimation
+            li = link_to 'The Luxe Collection', luxe_collection_path
+            li = link_to 'Bohemian Summer', bohemian_summer_collection_path
+            li = link_to 'Besties and Bridesmaids Collection', bridesmaid_collection_path
+            li = link_to "I'll Have What She's Having", all_size_collection_path
+            li = link_to 'Here Comes The Sun', here_comes_the_sun_collection_path
+
       .all-dresses
         center
           = button_to 'View all dresses', dresses_path, class: 'btn btn-block btn-black', method: :get
